--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -87,6 +87,10 @@
 				logo: "logo-test.png",
 				items: [
 					{
+						title: "Vstupenky",
+						link: "#listky"
+					},
+					{
 						title: "Galerie",
 						link: "/galerie"
 					},
