--- a/src/tpl/components/box/hero/hero.twig
+++ b/src/tpl/components/box/hero/hero.twig
@@ -11,9 +11,9 @@
     </div>
     <div class="hero__content">
         <h1 class="hero__title">Dozvuky Léta</h1>
-        <h4 class="hero__annot">{{ props.annot }}</h4>
-        {# <a href="#listky" class="btn-glitch" role="button"><span class="btn-glitch__text">Chci lístek {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "ticket" }} %}</span></a> #}
-        <a href="/galerie" class="btn-glitch" role="button"><span class="btn-glitch__text">Galerie</span></a>
+        <h4 class="hero__annot">{{ props.annot|raw }}</h4>
+        <a href="#listky" class="btn-glitch" role="button"><span class="btn-glitch__text">Chci lístek {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "ticket" }} %}</span></a>
+        {# <a href="/galerie" class="btn-glitch" role="button"><span class="btn-glitch__text">Galerie</span></a> #}
     </div>
     <div class="hero__timeline" style="--slide-duration: {{timeIntervalCss}}s;">
     </div>
