Preparing for 2024 season, changing images, bands, styles of cards

--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -4,83 +4,35 @@
 
 {% set crossroads = [
     {
-        img: "bands/01_Strasni banani.webp",
-        alt: "Strašný Banáni",
-        title: "Strašný Banáni",
-        link: "/kapely/strasnybanani",
+        img: "bands/1-harlej.webp",
+        alt: "Harlej",
+        link: "/kapely/harlej",
     },
     {
-        img: "bands/02_INST60.webp",
-        alt: "INST60",
-        title: "INST60",
-        link: "/kapely/inst60",
+        img: "bands/2-nickhillson.webp",
+        alt: "Nick Hillson",
+        link: "/kapely/nickhillson",
     },
     {
-        img: "bands/03_Jamaron.webp",
-        alt: "Jamaron",
-        title: "Jamaron",
-        link: "/kapely/jamaron",
-    },
-    {
-        img: "bands/04_Paulie Garand.webp",
-        alt: "Paulie Garand",
-        title: "Paulie Garand",
-        link: "/kapely/pauliegarand",
-    },
-    {
-        img: "bands/05_Doga.webp",
-        alt: "Doga",
-        title: "Doga",
-        link: "/kapely/doga",
-    },
-    {
-        img: "bands/06_375mnm.webp",
-        alt: "375 metrů nad mořem",
-        title: "375 metrů nad mořem",
-        link: "/kapely/375mnm",
-    },
-    {
-        img: "bands/07_TheExcited.webp",
-        alt: "The Excited",
-        title: "The Excited",
-        link: "/kapely/theexcited",
-    },
-    {
-        img: "bands/08_SafariExpres.webp",
-        alt: "Safari Expres",
-        title: "Safari Expres",
-        link: "/kapely/safariexpres",
-    },
-    {
-        img: "bands/09_AjBrix_AstroBoy.webp",
-        alt: "AJ Brix & Astro Boy",
-        title: "AJ Brix & Astro Boy",
+        img: "bands/3-astroboy.webp",
+        alt: "Astroboy",
         link: "/kapely/ajbrix&astroboy",
     },
     {
-        img: "bands/10_MIchalHruza.webp",
-        alt: "Michal Hrůza & kapela Hrůzy",
-        title: "Michal Hrůza & kapela Hrůzy",
-        link: "/kapely/michalhruza",
+        img: "bands/4-imodium.webp",
+        alt: "Imodium",
+        link: "/kapely/imodium",
     },
     {
-        img: "bands/11_TheAttics.webp",
-        alt: "The Attics",
-        title: "The Attics",
-        link: "/kapely/theattics",
+        img: "bands/5-375mnm.webp",
+        alt: "375 metrů nad mořem",
+        link: "/kapely/375mnm",
     },
     {
-        img: "bands/12_Marpo.webp",
-        alt: "Marpo & kapela TroubleGang",
-        title: "Marpo & kapela TroubleGang",
-        link: "/kapely/marpo",
-    },
-    {
-        img: "bands/13_HusýKrk.webp",
-        alt: "Husý krk",
-        title: "Husý krk",
-        link: "/kapely/husykrk",
-    },
+        img: "bands/6-impolite.webp",
+        alt: "Impolite",
+        link: "/kapely/impolite",
+    }
 ]%}
 
 {% block content %}
