--- a/src/tpl/Views/Kapely/ajbrix&astroboy.twig
+++ b/src/tpl/Views/Kapely/ajbrix&astroboy.twig
@@ -23,9 +23,9 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/09_AjBrix_AstroBoy.webp",
-                alt: "AJ Brix &Astro Boy",
-                title: "AJ Brix &Astro Boy",
+                img: "bands/3-astroboy.webp",
+                alt: "Astroboy & AJ Brix",
+                title: "Astroboy & AJ Brix",
             }} %}
         </div>
     </section>
@@ -41,16 +41,17 @@
         <div class="container">
             <div class="blog">
                 <div class="blog__text">
-                    <h4>Úvod o kapele</h4>
-                    <p>AJ Brix je charismatický mladý rapper, reprezentující hlas mladé generace. Velmi dobře zapadl do české rapové komunity, a to nejen oblibou u fanoušků, ale i u ostatních umělců. Mezi dosud nejúspěšnější singly AJ Brixe patří No Limit, který překonal hranici čtyř milionů streamů na Spotify (ve spolupráci s rapperem Earth) a track Nějaká doba, který se stal velmi populární u tvůrců a fanoušků na sociální síti TikTok. Početné views a streamy získává rapper svými posledními virálními tracky Tracey a Nebavíme, jež se po releasu umístily v Top 50 na Spotify a Top 10 hudebních trendů na YouTube. Začátkem května vydal svůj první ucelený projekt v podobě debutového alba Nemůžu tě držet za ruku. Ten obsahuje hity s miliony streamů a představuje vyznání pocitů z jeho náročné životní etapy. </p>
-                    <p>Astro Boy je hudebník, který je na scéně krátkou dobu ale za tu chvíli se jeho progres zvětšuje velkou rychlostí. Jeho singly jsou v éteru velmi populární. Jeden z jeho novějších singlů Sunset ve spolupráci s AJem Brixem se dostal přes hranici 500 000 streamů na streamovacích platformách. Přeskočil hranici 25 000 posluchačů měsíčně na Spotify a stále roste. Momentálně má v šuplíku spoustu nových singlů, které bude postupně vypouštět do světa. Máme se na co těšit.</p>
-                    <p>Čas vystoupení: Sobota 2. 9. od 18:30</p>
+                    <h4>Astroboy</h4>
+                    <p>Astro Boy je mladý nadějný umělec zaměřující se na rap, Pop, DNB. Momentálně čítá jeho základna víc než 30.000 posluchačů měsíčně na platformě Spotify a dalších streamovacích službách. Na začátku letošního roku dostal příležitost vystoupit živě v Pražské Lucerně, po boku zpěvačky Pam Rabbit. Jeho singly se pravidelně umisťují v kvalitních playlistech, například jeden z jeho novějších singlů GUEST se dostal do playlistu Generace rap který je považován za nejlepší playlist zaměřující se na CZ/SK rapovou scénu. Jeho texty baví širokou veřejnost a stejně tak se do srdce dostanou i jeho návykové beaty.</p>
+                    <h4>AJ Brix</h4>
+                    <p>Charismatický mladý rapper Aj Brix svou hudební kariéru odstartoval v roce 2021. Mimo jiné působí na sociálních sítích; jenom na instagramovém účtu má početnou základnu čítající na 119 tisíc fanoušků. Mezi jeho nejúspěšnější tracky patří No Limit, který překonal hranici pět miliónů streamů na Spotify, a Nějaká doba, trendující především na online platformě TikTok. Významný počet views zaznamenal rapper u posledních singlů Tracey a Nebavíme, které se po releasu umístily v Top 50 na Spotify a Top 10 hudebních trendů na YouTube. V debutovém albu Nemůžu tě držet za ruku z května 2023 AJ Brix zachycuje pocity, které prožíval během náročné životní etapy. Ve své první studiovce zpívá především o lásce, zradě, selhání, rozchodech, uvědomění i návratech. S jeho texty se ztotožní nejen publikum spadající do kategorie Generace Z, což dokazují pozitivní ohlasy široké veřejnosti.</p>
                 </div>
                 <div class="blog__social">
                     <span>Sociální sítě:</span>
-                    <a target="_blank" href="https://www.facebook.com/ajbrixofficial " class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "fb" }} %}</ab>
+                    <span>Astroboy</span>
                     <a target="_blank" href="https://www.instagram.com/boyastro_here/" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
-                    <a target="_blank" href="https://youtu.be/0ZVLJwCPGWE" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "yt" }} %}</a>
+                    <span>AJ Brix</span>
+                    <a target="_blank" href="https://www.instagram.com/a.bately/" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
                 </div>
             </div>
         </div>
