--- a/src/tpl/Views/Kapely/impolite.twig
+++ b/src/tpl/Views/Kapely/impolite.twig
@@ -1,6 +1,7 @@
 {% extends '@layout/layout.twig' %}
-{% set pageTitle = 'Dozvuky léta - 375 metrů nad mořem' %}
-{% set description = 'Poslední kapelou, která se představí v rámci prvního dne programu Dozvuků léta bude opět 375 metrů nad mořem. Jedná se o zábavovou, plesovou i svatební kapelu z České Třebové' %}
+{% set pageTitle = 'Dozvuky léta - Impolite' %}
+{% set description = 'Kapela Impolite
+Původní záměr našeho shledání bylo odehrát pár letních koncertů pod sólistkou barborou k, ale všechno do sebe zapadlo natolik, že jsme se rozhodli vytvořit úplně nový projekt. Po malém přeskupení a roce vymýšlení názvu jsme konečně oficiální. ' %}
 
 {% block content %}
 
@@ -14,7 +15,7 @@
                         url: "/kapely",
                     },
                     {
-                        link: "375 metrů nad mořem",
+                        link: "Impolite",
                     }
                 ]
             }} %}
@@ -23,16 +24,16 @@
     <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "bands/5-375mnm.webp",
-                alt: "375 metrů nad mořem",
-                title: "375 metrů nad mořem",
+                img: "bands/6-impolite.webp",
+                alt: "Impolite",
+                title: "Impolite",
             }} %}
         </div>
     </section>
     <section class="section section--top">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
-                title: "375 metrů nad mořem",
+                title: "Impolite",
                 tag: "h2",
             }} %}
         </div>
@@ -42,8 +43,14 @@
             <div class="blog">
                 <div class="blog__text">
                     <h4>Úvod o kapele</h4>
-                    <p>Kapelu 375 m.n.m. už asi nemusím nijak detailně představovat, svým skvělým energickým koncertem zakončovala všechny tři ročníky Dozvuků a příští ročník tomu nebude jinak. 375 je banda pěti členů z České Třebové - Danča, Mártty, Natálie, Janek a Tomáš. Hrají covery známých písní, ale také vlastní tvorbu. 
-                    Budeme se těšit! 🔥</p>
+                    <p>Kapela Impolite
+                    Původní záměr našeho shledání bylo odehrát pár letních koncertů pod sólistkou barborou k, ale všechno do sebe zapadlo natolik, že jsme se rozhodli vytvořit úplně nový projekt. Po malém přeskupení a roce vymýšlení názvu jsme konečně oficiální. 
+                   </p>
+                   <p> 
+                    Jsme kapela Impolite. I když název napovídá opaku, jsme velice slušní, mladí, kreativní hudebníci z okolí Litomyšle a Vysokého Mýta. Do naší hudby se snažíme promítat kus sebe a vytvářet poutavé, zajímavé melodie a texty, se kterými se posluchači ztotožní.
+                    </p><p>Žánr, který nás asi nejvíce vystihuje je ‘emocionální pop/rock’. Elektrické kytary doprovází pestré vokální harmonie, jindy zase akustická kytara, piano, či housle. 
+                    Pro rok 2024 máme veliké ambice a festival Dozvuky Léta je jedna ze skvělých příležitostí, na kterou už se nemůžeme dočkat. 
+                    Těšíme se na Vás!</p>
                     {# <div class="blog__audio-section">
                         <h4>Ukázka z tvorby:</h4>
                         {% include "@components/box/audio/audio.twig" with { props: { 
@@ -64,7 +71,7 @@
                 </div>
                 <div class="blog__social">
                     <span>Sociální sítě:</span>
-                    <a target="_blank" href="https://www.instagram.com/375_m.n.m/" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
+                    <a target="_blank" href="https://www.instagram.com/impolite.official/" class="blog__social-item">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
                 </div>
             </div>
         </div>
