--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -91,6 +91,10 @@
 						link: "#listky"
 					},
 					{
+						title: "Kapely",
+						link: "/kapely",
+					},
+					{
 						title: "Galerie",
 						link: "/galerie"
 					},
