--- a/src/css/components/_crossroad.scss
+++ b/src/css/components/_crossroad.scss
@@ -1,13 +1,12 @@
 .crossroad {
     @extend %reset-anchor;
     display: flex;
-    aspect-ratio: 16/10;
+    aspect-ratio: 1;
     &__img {
         width: 100%;
         border-radius: 8px;
         overflow: hidden;
         position: relative;
-        aspect-ratio: 16/10;
         & img {
             transition: transform $t;
         }
