--- a/src/tpl/components/box/carousel-band/carousel-band.twig
+++ b/src/tpl/components/box/carousel-band/carousel-band.twig
@@ -9,13 +9,19 @@
                             lazyload: true,
                         }} %}
                     </div>
+                    {% if item.title or item.description %}
                     <div class="carousel-band__content">
+                        {% if item.title %}
                         <h4 class="carousel-band__title">{{ item.title }}</h4>
+                        {% endif %}
+                        {% if item.description %}
                         <div class="carousel-band__more">
                             <p class="carousel-band__description">{{ item.description }}</p>
                             <span class="text-link">Zobrazit více {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %}</span>
                         </div>
+                        {% endif %}
                     </div>
+                    {% endif %}
             </a>
             {% endfor %}
         </div>
