--- a/src/tpl/components/box/crossroad/crossroad.twig
+++ b/src/tpl/components/box/crossroad/crossroad.twig
@@ -5,7 +5,9 @@
             alt: item.alt
         }} %} 
     </div>
+    {% if item.title %}
     <div class="crossroad__content">
         <h4 class="crossroad__title">{{ item.title }}{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %}</h4>
     </div>
+    {% endif %}
 </a>
