Rytmus and Karol a kvido added

--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -9,6 +9,11 @@
         link: "/kapely/harlej",
     },
     {
+        img: "bands/8-rytmus.webp",
+        alt: "Rytmus",
+        link: "/kapely/rytmus",
+    },
+    {
         img: "bands/2-nickhillson.webp",
         alt: "Nick Hillson",
         link: "/kapely/nickhillson",
@@ -32,6 +37,11 @@
         img: "bands/6-impolite.webp",
         alt: "Impolite",
         link: "/kapely/impolite",
+    },
+    {
+        img: "bands/7-karolakvido.webp",
+        alt: "Karol a Kvído",
+        link: "/kapely/karolakvido",
     }
 ]%}
 
