--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -102,6 +102,12 @@ S hitovými písněmi a charismatickými živými vystoupeními si získali srdc
 Harlej mají za sebou několik DVD, nespočet vydaných alb a posledním z nich je letošní album nesoucí název “Zatím je to dobrý”.  "
                     },
                     {
+                        img: "bands/8-rytmus.webp",
+                        alt: "Rytmus",
+                        link: "/kapely/rytmus",
+                        description: "Dalším a to největším interpretem Dozvuků léta je RYTMUS. 👑🔥 Rytmus, vlastním jménem Patrik Vrbovský, je slovenský rapper, zpěvák, herec, televizní osobnost a zakladatel skupiny Kontrafakt, který vystupuje také sám či ve spolupráci s jinými týmy nebo zpěváky. Víc o Rytmusovi asi nemusíme psát, není člověka, co by ho neznal."
+                    },
+                    {
                         img: "bands/2-nickhillson.webp",
                         alt: "Nick Hillson",
                         link: "/kapely/nickhillson",
