Karol added to homepage carousel

--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -139,6 +139,12 @@ Budeme se těšit! 🔥",
                         description: "Kapela Impolite
 Původní záměr našeho shledání bylo odehrát pár letních koncertů pod sólistkou barborou k, ale všechno do sebe zapadlo natolik, že jsme se rozhodli vytvořit úplně nový projekt. Po malém přeskupení a roce vymýšlení názvu jsme konečně oficiální. Žánr, který nás asi nejvíce vystihuje je ‘emocionální pop/rock’. Elektrické kytary doprovází pestré vokální harmonie, jindy zase akustická kytara, piano, či housle. ",
                     },
+                    {
+                        img: "bands/7-karolakvido.webp",
+                        alt: "Karol a Kvído",
+                        link: "/kapely/karolakvido",
+                        description: "Karol a Kvído jsou dětská hudební dvojice, jejichž úkolem je děti bavit a přitom písničkou něco naučit. Více o této dvojici asi nemusím psát, všichni rodiče je znají a všechny děti si známé písničky od Karol a Kvída zpívají. 🎨♥️",
+                    },
                 ]%}
                 {% include "@components/box/carousel-band/carousel-band.twig" with { props: {
                     loop: true,
